switch to autotools

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,7 +8,7 @@ pamlibdir = @pamlibdir@
 
 noinst_HEADERS = pcsc_cr.h token.h
 
-pam_pcsc_cr_LTLIBRARIES = pam_pcsc_cr.la
+lib_LTLIBRARIES = pam_pcsc_cr.la
 EXTRA_pam_pcsc_cr_la_SOURCES = ossl_crypto.c tom_prypto.c
 pam_pcsc_cr_la_SOURCES = crypto.c pcsc_cr.c ykneo.c
 pam_pcsc_cr_la_LDFLAGS = -module -avoid-version
