introduce setup program

--- a/Makefile.am
+++ b/Makefile.am
@@ -15,6 +15,9 @@ lib_LTLIBRARIES = pam_pcsc_cr.la
 pam_pcsc_cr_la_LDFLAGS = -module -avoid-version
 pam_pcsc_cr_la_LIBADD = libpcsc_cr.la
 
+bin_PROGRAMS = pam_cr_setup
+pam_cr_setup_LDADD = libpcsc_cr.la
+
 check_PROGRAMS = test_auth test_serial test_crypto test_chalresp
 test_auth_LDADD = libpcsc_cr.la
 test_serial_LDADD = libpcsc_cr.la
