tidy build process

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 # $Id: Makefile.am 295 2005-05-13 14:58:27Z crosser $
                                                                                 
-AUTOMAKE_OPTIONS = foreign
+AUTOMAKE_OPTIONS = foreign no-dist-gzip dist-xz
 ACLOCAL_AMFLAGS = -I m4
 
 libdir = $(PAMDIR)
@@ -9,7 +9,7 @@ DEFS = -DDEBUG_PAM -DPAM_DEBUG @DEFS@
 noinst_HEADERS = pcsc_cr.h token.h crypto_if.h crypto.h serial.h authobj.h \
 		authfile.h
 
-EXTRA_LTLIBRARIES = libpcsc_cr.la
+noinst_LTLIBRARIES = libpcsc_cr.la
 libpcsc_cr_la_SOURCES = authfile.c authobj.c serial.c crypto.c pcsc_cr.c \
 			ykneo.c
 EXTRA_libpcsc_cr_la_SOURCES = ossl_crypto.c tom_crypto.c gnu_crypto.c
@@ -17,6 +17,7 @@ libpcsc_cr_la_LIBADD = @CRYPTO_OBJS@
 libpcsc_cr_la_DEPENDENCIES = @CRYPTO_OBJS@
 
 lib_LTLIBRARIES = pam_pcsc_cr.la
+pam_pcsc_cr_la_LIBTOOLFLAGS = --tag=disable-static
 pam_pcsc_cr_la_LDFLAGS = -module -avoid-version
 pam_pcsc_cr_la_LIBADD = libpcsc_cr.la
 
@@ -33,3 +34,9 @@ EXTRA_DIST = autogen.sh README.md README_CR
 
 TESTS = test_auth test_serial test_crypto test_chalresp
 XFAIL_TESTS = test_chalresp
+
+html: README.html
+README.html: README.md
+	pandoc -f markdown -t html5 --self-contained -o README.html README.md
+clean-local:
+	rm -f README.html
