include base64 encoder

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,11 +7,11 @@ libdir = $(PAMDIR)
 DEFS = -DDEBUG_PAM -DPAM_DEBUG @DEFS@
 
 noinst_HEADERS = pcsc_cr.h token.h crypto_if.h crypto.h serial.h authobj.h \
-		authfile.h
+		authfile.h base64.h
 
 noinst_LTLIBRARIES = libpcsc_cr.la
 libpcsc_cr_la_SOURCES = authfile.c authobj.c serial.c crypto.c pcsc_cr.c \
-			ykneo.c
+			ykneo.c base64.c
 EXTRA_libpcsc_cr_la_SOURCES = ossl_crypto.c tom_crypto.c gnu_crypto.c
 libpcsc_cr_la_LIBADD = @CRYPTO_OBJS@
 libpcsc_cr_la_DEPENDENCIES = @CRYPTO_OBJS@
@@ -24,15 +24,16 @@ pam_pcsc_cr_la_LIBADD = libpcsc_cr.la
 bin_PROGRAMS = pam_cr_setup
 pam_cr_setup_LDADD = libpcsc_cr.la
 
-check_PROGRAMS = test_auth test_serial test_crypto test_chalresp
+check_PROGRAMS = test_auth test_serial test_crypto test_chalresp test_base64
 test_auth_LDADD = libpcsc_cr.la
 test_serial_LDADD = libpcsc_cr.la
 test_crypto_LDADD = libpcsc_cr.la
 test_chalresp_LDADD = libpcsc_cr.la
+test_base64_LDADD = libpcsc_cr.la
 
 EXTRA_DIST = autogen.sh README.md README_CR
 
-TESTS = test_auth test_serial test_crypto test_chalresp
+TESTS = test_auth test_serial test_crypto test_chalresp test_base64
 XFAIL_TESTS = test_chalresp
 
 html: README.html
