add man page for pam_cr_setup

--- a/Makefile.am
+++ b/Makefile.am
@@ -24,6 +24,8 @@ pam_pcsc_cr_la_LIBADD = libpcsc_cr.la
 bin_PROGRAMS = pam_cr_setup
 pam_cr_setup_LDADD = libpcsc_cr.la
 
+man_MANS = pam_cr_setup.8
+
 check_PROGRAMS = test_auth test_serial test_crypto test_chalresp test_base64
 test_auth_LDADD = libpcsc_cr.la
 test_serial_LDADD = libpcsc_cr.la
